# FindFrontFaceFromVideo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CsvWriter/: CMakeLists.txt  CsvWriter.cpp  CsvWriter.h
FaceDetector/: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h
FrameReader/: CMakeLists.txt  FrameReader.cpp  FrameReader.h
FrameWriter/: CMakeLists.txt  FrameWriter.cpp  FrameWriter.h
PersonRecognizer/: CMakeLists.txt  PersonRecognizer.cpp  PersonRecognizer.h
cascades/: haarcascade_frontalface_default.xml
obama_faces/: list.txt
